[package]
name = "fathom"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = "0.30.1"
js-sys = "0.3.77"
log = "0.4.27"
wasm-bindgen = "0.2"
wasm-log = "0.3.1"
web-sys = { version = "0.3", features = [
    'Document',
    'Element',
    'Event',
    'HtmlCanvasElement',
    'KeyboardEvent',
    'WebGl2RenderingContext',
    'WebGlBuffer',
    'WebGlFramebuffer',
    'WebGlProgram',
    'WebGlShader',
    'WebGlTexture',
    'WebGlUniformLocation',
    'WebGlVertexArrayObject',
    'Window',
] }
web-time = "1.1.0"
workflow-panic-hook = "0.18.0"
